# ccnim

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.en.md  README.md  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
crates/app-config/: Cargo.toml
crates/app-config/src/: lib.rs
crates/nim-client/: Cargo.toml
crates/nim-client/src/: client.rs  key_pool.rs  lib.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: anthropic.rs  conversion.rs  lib.rs  openai.rs  provider.rs  router.rs  sse.rs  tokens.rs
crates/proxy-server/: Cargo.toml
crates/proxy-server/src/: lib.rs  metrics.rs
scripts/: generate-icon.mjs
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ide_scan.rs  main.rs
