[package]
name = "ccnim"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
app-config = { path = "../crates/app-config" }
directories.workspace = true
nim-client = { path = "../crates/nim-client" }
proxy-core = { path = "../crates/proxy-core" }
proxy-server = { path = "../crates/proxy-server" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-updater.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
