[package]
name = "nim-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
bytes = "1"
futures-util.workspace = true
parking_lot.workspace = true
proxy-core = { path = "../proxy-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
