[package]
name = "proxy-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
app-config = { path = "../app-config" }
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
futures-util.workspace = true
nim-client = { path = "../nim-client" }
proxy-core = { path = "../proxy-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
